Adjusted style so item divs line up on the top

--- a/04-flex-information/style.css
+++ b/04-flex-information/style.css
@@ -6,7 +6,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 2em;
+  gap: 52px;
 }
 
 img {
@@ -18,7 +18,7 @@ img {
   font-size: 36px;
   font-weight: 900;
   text-align: center;
-  margin-bottom: 0.5em;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -38,7 +38,8 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 15%;
+  width: 200px;
+  height: 200px;
 }
 
 .image {
@@ -46,6 +47,5 @@ img {
 }
 
 .text {
-  flex-wrap: wrap;
   text-align: center;
 }
