--- a/06-flex-layout/style.css
+++ b/06-flex-layout/style.css
@@ -1,6 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   height: 100vh;
   margin: 0;
   overflow: hidden;
@@ -13,6 +16,8 @@ img {
 
 button {
   font-family: Roboto, sans-serif;
+  font-weight: bold;
+  padding: 8px;
   border: none;
   border-radius: 8px;
   background: #eee;
@@ -24,4 +29,57 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 2px 10px;
+}
+
+.header > .left-links {
+  display: flex;
+  padding: 0 10px;
+  list-style: none;
+  gap: 10px;
+}
+
+.header > .right-links {
+  display: flex;
+  padding: 0 10px;
+  list-style: none;
+  gap: 10px;
+}
+
+a {
+  text-decoration: none;
+  color: #787878;
+}
+
+.content {
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  padding: 2px 10px;
+  background-color: #eeeeee;
+}
+
+.footer > .left-links {
+  display: flex;
+  padding: 0 10px;
+  list-style: none;
+  gap: 10px;
+}
+
+.footer > .right-links {
+  display: flex;
+  padding: 0 10px;
+  list-style: none;
+  gap: 10px;
 }
